--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL               = "https://518855.xyz/"
 languageCode          = "zh-CN"
-title                 = "Mjj的导航站 | 免费服务器| 免费资源 | 必备工具 | 导航"
-description           = "免费服务器 免费资源 Mjj的导航站 必备工具 导航"
+title                 = "YuUu的导航站"
+description           = ""
 theme                 = "WebStack-Hugo"
 preserveTaxonomyNames = true
 disablePathToLower    = true
