--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL               = "https://518855.xyz/"
+baseURL               = "https://yu.yuuu.qzz.io/"
 languageCode          = "zh-CN"
 title                 = "YuUu的导航站"
 description           = ""
@@ -9,11 +9,7 @@ hasCJKLanguage        = true
 publishDir            = "docs"					# 站点静态文件保存目录
 
 [params]
-    author        = "AiEDU"
-    description   = "免费服务器 免费资源 Mjj的导航站 必备工具 导航"
     upload        = "https://518855.xyz/"  # 左侧导航栏的"网站提交"
-    about         = "https://www.aiedu.pp.ua"	# 左侧导航栏的"关于导航"页面(./about)
-    repository    = "https://github.com/88899"
     enablePreLoad = true					# 网站完全打开前预加载动画
     textPreLoad   = "AiEDU"				# 预加载的动画文字, 只有当enablePreLoad=true时生效
     expandSidebar = true					# 默认展开左侧边导航栏
