--- a/config.toml
+++ b/config.toml
@@ -1,41 +1,47 @@
+# 基本配置
 baseURL               = "https://yu.yuuu.qzz.io/"
 languageCode          = "zh-CN"
 title                 = "YuUu的导航站"
-description           = ""
+description           = ""  # 网站描述，可以根据需要填写
 theme                 = "WebStack-Hugo"
 preserveTaxonomyNames = true
 disablePathToLower    = true
 hasCJKLanguage        = true
-publishDir            = "docs"					# 站点静态文件保存目录
+publishDir            = "docs"  # 站点静态文件保存目录
 
+# 自定义参数
 [params]
-    upload        = "https://518855.xyz/"  # 左侧导航栏的"网站提交"
-    enablePreLoad = true					# 网站完全打开前预加载动画
-    textPreLoad   = "AiEDU"				# 预加载的动画文字, 只有当enablePreLoad=true时生效
-    expandSidebar = true					# 默认展开左侧边导航栏
-    logosPath     = "assets/images/logos"			# 网站每个导航地址logo存放地址
-    defaultLogo   = "assets/images/logos/default.webp"		# logo图片资源不存在或者错误时, 默认显示的logo; 该参数如为空,将会一直加载对应的logo,直至成功
-    nightMode     = false					# 默认站点为深色(夜间)模式
-    yiyan         = false                         		# 默认启用一言服务
+    upload        = "https://yu.yuuu.qzz.io/"  # 左侧导航栏的"网站提交"链接
+    enablePreLoad = true  # 网站完全打开前预加载动画
+    textPreLoad   = "YuUu"  # 预加载的动画文字，只有当 enablePreLoad = true 时生效
+    expandSidebar = true  # 默认展开左侧边导航栏
+    logosPath     = "assets/images/logos"  # 网站每个导航地址 logo 存放地址
+    defaultLogo   = "assets/images/logos/default.webp"  # logo 图片资源不存在或错误时，默认显示的 logo
+    nightMode     = false  # 默认站点为深色(夜间)模式
+    yiyan         = false  # 默认禁用一言服务（可根据需要启用）
 
+# SEO 配置
 [params.seo]
-    # baiduhmid     = '252f9700e4c1ad32c2647eb839ef71e6'		# 百度统计 hm.src 的 ID
-    # baiduSiteVer  = 'codeva-cCAOSG8MBO'				# 百度HTML标签验证(baidu-site-verification)
-    # tj51laid        = ''                        		# 51.LA 网站统计
+    # baiduhmid     = '252f9700e4c1ad32c2647eb839ef71e6'  # 百度统计 hm.src 的 ID
+    # baiduSiteVer  = 'codeva-cCAOSG8MBO'  # 百度 HTML 标签验证 (baidu-site-verification)
+    # tj51laid        = ''  # 51.LA 网站统计
     # tj51lack        = ''
-    GoogleAdsClient = 'G-TZZ8ZZD3FR'
+    GoogleAdsClient = 'G-TZZ8ZZD3FR'  # Google 广告客户端 ID
 
+# 天气服务配置
 [params.qweather]
-    key = ""
+    key = ""  # 你的天气 API 密钥（如果有的话）
 
+# 图片资源配置
 [params.images]
-    favicon           = "assets/images/favicon.png"           # 网站图标
-    searchImageL      = "assets/images/bg-dna.jpg"             # 搜索部分浅色背景图
-    searchImageD      = "assets/images/bg-dna-d.jpg"             # 搜索部分深色背景图
-    logoExpandLight   = "assets/images/wuzi.png"               # 扩展状态下的浅色 logo
-    logoExpandDark    = "assets/images/wuzi-b.png"               # 扩展状态下的深色 logo
-    logoCollapseLight = "assets/images/favicon.png"           # 收起状态下的浅色 logo
-    logoCollapseDark  = "assets/images/favicon.png"           # 收起状态下的深色 logo
+    favicon           = "assets/images/favicon.png"  # 网站图标
+    searchImageL      = "assets/images/bg-dna.jpg"  # 搜索部分浅色背景图
+    searchImageD      = "assets/images/bg-dna-d.jpg"  # 搜索部分深色背景图
+    logoExpandLight   = "assets/images/wuzi.png"  # 扩展状态下的浅色 logo
+    logoExpandDark    = "assets/images/wuzi-b.png"  # 扩展状态下的深色 logo
+    logoCollapseLight = "assets/images/favicon.png"  # 收起状态下的浅色 logo
+    logoCollapseDark  = "assets/images/favicon.png"  # 收起状态下的深色 logo
 
+# Markdown 渲染设置
 [markup.goldmark.renderer]
-    unsafe = true
+    unsafe = true  # 允许不安全的 HTML 渲染
